Vendor and expenses remapping