@@ -1,5 +1,6 @@
 package com.smartstay.smartstay.services;
 
+import com.smartstay.smartstay.Wrappers.expenses.ExpenseExpenseDetailsMapper;
 import com.smartstay.smartstay.Wrappers.expenses.ExpenseListMapper;
 import com.smartstay.smartstay.Wrappers.expenses.ExpenseTableMapper;
 import com.smartstay.smartstay.Wrappers.expenses.VendorExpenseSummaryMapper;
@@ -108,6 +109,8 @@ public class ExpenseService {
 
     @Autowired
     private VendorRepository vendorRepository;
+    @Autowired
+    private VendorService vendorService;
 
     @Autowired
     private VendorFinancialService vendorFinancialService;
@@ -435,7 +438,7 @@ public class ExpenseService {
         expensesV1.setDescription(expense.description());
         expensesV1.setTitle(expense.title());
         expensesV1.setIsVendorExpense(expense.isVendorExpense());
-        String vendorId = expense.vendorId() == null ? null : String.valueOf(expense.vendorId());
+        Integer vendorId = expense.vendorId() == null ? null : expense.vendorId();
         expensesV1.setVendorId(vendorId);
         expensesV1.setPaymentStatus(requestedStatus);
         // A positive creditPeriod in the request takes precedence over any vendor-level configuration.
@@ -718,7 +721,7 @@ public class ExpenseService {
         if (vendorKey == null || vendorRepository.findByVendorId(vendorKey) == null) {
             return new ResponseEntity<>(Utils.INVALID_VENDOR, HttpStatus.BAD_REQUEST);
         }
-        String vendorIdStr = String.valueOf(vendorKey);
+        Integer vendorIdStr =vendorKey;
 
         // Payment-method based validation (transaction id is optional for vendor settlement).
         String methodError = validatePaymentMethod(payload.paymentMethod(), payload.transactionId(), false);
@@ -918,7 +921,7 @@ public class ExpenseService {
                 : new Date();
     }
 
-    private ExpensePayment buildPayment(String expenseId, Long expenseItemId, String hostelId, String vendorId,
+    private ExpensePayment buildPayment(String expenseId, Long expenseItemId, String hostelId, Integer vendorId,
                                         double paidAmount, String paymentMethod, String bankId, Date paymentDate,
                                         String transactionId, String notes, List<String> imageUrls,
                                         String auditUser, Date auditNow) {
@@ -1328,12 +1331,12 @@ public class ExpenseService {
      * formatter (the same logic used by the Vendor Details and Get All Vendors APIs). Returns
      * {@code null} for non-vendor expenses or when the vendor id is missing/non-numeric/unknown.
      */
-    private String resolveVendorAddress(String vendorId) {
-        if (vendorId == null || vendorId.isBlank()) {
+    private String resolveVendorAddress(Integer vendorId) {
+        if (vendorId == null) {
             return null;
         }
         try {
-            VendorV1 vendor = vendorRepository.findByVendorId(Integer.parseInt(vendorId.trim()));
+            VendorV1 vendor = vendorRepository.findByVendorId(vendorId);
             if (vendor == null) {
                 return null;
             }
@@ -1562,42 +1565,18 @@ public class ExpenseService {
         if (!uIds.isEmpty()) {
             usersService.findAllUsersFromUserId(uIds.stream().toList()).forEach(u -> userMap.put(u.getUserId(), u));
         }
+        List<Integer> vendorExpenseIds = secondaryExpenses
+                .stream()
+                .filter(i -> i.getIsVendorExpense() != null && i.getIsVendorExpense())
+                .map(ExpensesV1::getVendorId)
+                .toList();
 
-        List<ExpenseReportResponse.ExpenseDetail> details = secondaryExpenses.stream().map(e -> {
-            ExpenseCategory cat = categoryMap.get(e.getCategoryId());
-            String catName = (cat != null) ? cat.getCategoryName() : null;
-            String subCatName = null;
-            if (cat != null && e.getSubCategoryId() != null && cat.getListSubCategories() != null) {
-                subCatName = cat.getListSubCategories().stream()
-                        .filter(s -> s.getSubCategoryId().equals(e.getSubCategoryId()))
-                        .map(ExpenseSubCategory::getSubCategoryName).findFirst().orElse(null);
-            }
+        List<VendorV1> listVendors = vendorService.getAllVendorsByHostelIdAndVendorIds(hostelId, vendorExpenseIds);
 
-            BankingV1 b = bankMap.get(e.getBankId());
-            String pMode = (b != null) ? Utils.capitalize(b.getAccountType()) : null;
-            String account = (b != null) ? (b.getAccountHolderName() + "-" + Utils.capitalize(b.getAccountType()))
-                    : null;
-
-            Users u = userMap.get(e.getCreatedBy());
-            String creatorName = (u != null)
-                    ? (u.getFirstName() + " " + (u.getLastName() != null ? u.getLastName() : ""))
-                    : null;
-
-            return ExpenseReportResponse.ExpenseDetail.builder()
-                    .expenseId(e.getExpenseId())
-                    .date(Utils.dateToString(e.getTransactionDate()))
-                    .expenseCategory(catName)
-                    .expenseSubCategory(subCatName)
-                    .description(e.getDescription())
-                    .counts(e.getUnitCount() != null ? e.getUnitCount() : 0)
-                    .assetName(null)
-                    .vendorName(null)
-                    .paymentMode(pMode)
-                    .account(account)
-                    .amount(e.getTransactionAmount())
-                    .createdBy(creatorName != null ? creatorName.trim() : null)
-                    .build();
-        }).collect(Collectors.toList());
+        List<ExpenseReportResponse.ExpenseDetail> details = secondaryExpenses
+                .stream()
+                .map(e -> new ExpenseExpenseDetailsMapper(categoryMap, bankMap, userMap, listVendors).apply(e))
+                .toList();
 
         ExpenseReportResponse.FiltersData filtersData = buildFiltersData(hostelId);
 
@@ -1627,7 +1606,11 @@ public class ExpenseService {
         periodList.add(new ExpenseReportResponse.FilterItem("LAST_3_MONTHS", "Last 3 Months"));
         periodList.add(new ExpenseReportResponse.FilterItem("LAST_6_MONTHS", "Last 6 Months"));
 
-
+        List<VendorV1> vendors = vendorService.findActiveByHostelId(hostelId);
+        List<ExpenseReportResponse.FilterItem> vendorsList = vendors
+                .stream()
+                .map(i -> new ExpenseReportResponse.FilterItem(i.getVendorId(), Utils.fullName(i.getFirstName(), i.getLastName())))
+                .toList();
         List<com.smartstay.smartstay.dto.expenses.ExpensesCategory> allCategories = expenseCategoryService
                 .getAllActiveCategories(hostelId);
 
@@ -1650,12 +1633,21 @@ public class ExpenseService {
                 .map(e -> Utils.capitalize(e.name()))
                 .collect(Collectors.toList());
 
+        List<ExpenseReportResponse.FilterItem> paymentStatusFilterItems = new ArrayList<>();
+        paymentStatusFilterItems.add(new ExpenseReportResponse.FilterItem(ExpensePaymentStatus.Full.name(), "Full"));
+        paymentStatusFilterItems.add(new ExpenseReportResponse.FilterItem(ExpensePaymentStatus.Partial.name(), "Partial"));
+        paymentStatusFilterItems.add(new ExpenseReportResponse.FilterItem(ExpensePaymentStatus.Pending.name(), "Pending"));
+        paymentStatusFilterItems.add(new ExpenseReportResponse.FilterItem(ExpensePaymentStatus.Overdue.name(), "Overdue"));
+
+
         return ExpenseReportResponse.FiltersData.builder()
                 .period(periodList)
                 .category(catFilters)
                 .subCategory(subCatFilters)
                 .createdBy(creators)
                 .paymentMode(paymentModes)
+                .paymentStatus(paymentStatusFilterItems)
+                .vendors(vendorsList)
                 .build();
     }
 
@@ -1834,7 +1826,7 @@ public class ExpenseService {
             return new ResponseEntity<>(Utils.INVALID_REQUEST, HttpStatus.BAD_REQUEST);
         }
 
-        String vendorId = expensesV1.getVendorId();
+        Integer vendorId = expensesV1.getVendorId();
         if (bankTransactionService.deleteExpnese(hostelId, expenseId)) {
             expenseItemRepository.deleteByExpenseId(expenseId);
             expensePaymentRepository.deleteByExpenseId(expenseId);
